@@ -1,3 +1,8 @@
+2009-03-28  Paul Thomas  <pault@gcc.gnu.org>
+
+	PR fortran/38765
+	* gfortran.dg/alloc_comp_assign_9.f90: New test.
+
 2009-03-28  Daniel Kraft  <d@domob.eu>
 
 	* gfortran.dg/trim_1.f90: New test.
